grid overflow fixed

--- a/src/index.css
+++ b/src/index.css
@@ -93,8 +93,6 @@ ul li {
   justify-content: center;
   align-items: center;
   padding: 1rem 2rem;
-  height: fit-content;
-  /* background-color: rgba(0, 0, 0, .1); */
   box-shadow: 0px 2px 13px rgba(0, 0, 0, .1);
   border-radius: 5px;
 }
@@ -130,4 +128,10 @@ ul li button {
 
 .update-btn:hover {
   background-color: #fff;
+}
+
+@media(max-width: 500px) {
+  ul {
+    grid-template-columns: 1fr;
+  }
 }
